[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/ui/pause.gd" type="Script" id=1]
[ext_resource path="res://fonts/flat-theme.tres" type="Theme" id=2]
[ext_resource path="res://gfx/gui/hud/pause-gradient.png" type="Texture" id=3]
[ext_resource path="res://sounds/gui/select-off.ogg" type="AudioStream" id=4]
[ext_resource path="res://sounds/gui/select-on.ogg" type="AudioStream" id=5]
[ext_resource path="res://scripts/menu-grab-focus.gd" type="Script" id=6]

[node name="pause-menu" type="CanvasLayer"]

[node name="pause" type="Control" parent="."]
pause_mode = 2
margin_left = 299.0
margin_top = 221.0
margin_right = 339.0
margin_bottom = 261.0
script = ExtResource( 1 )

[node name="off" type="AudioStreamPlayer" parent="pause"]
stream = ExtResource( 4 )

[node name="on" type="AudioStreamPlayer" parent="pause"]
stream = ExtResource( 5 )

[node name="Pause-gradient" type="Sprite" parent="pause"]
position = Vector2( -153, -99 )
texture = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="pause"]
margin_left = -258.0
margin_top = -129.0
margin_right = -141.0
margin_bottom = -5.0

[node name="resume" type="Button" parent="pause/VBoxContainer"]
margin_right = 117.0
margin_bottom = 28.0
theme = ExtResource( 2 )
text = "Resume"
script = ExtResource( 6 )

[node name="retry" type="Button" parent="pause/VBoxContainer"]
margin_top = 32.0
margin_right = 117.0
margin_bottom = 60.0
theme = ExtResource( 2 )
text = "Retry"

[node name="Options" type="Button" parent="pause/VBoxContainer"]
margin_top = 64.0
margin_right = 117.0
margin_bottom = 92.0
theme = ExtResource( 2 )
text = "options"

[node name="exit" type="Button" parent="pause/VBoxContainer"]
margin_top = 96.0
margin_right = 117.0
margin_bottom = 124.0
theme = ExtResource( 2 )
text = "Exit"

[node name="RichTextLabel" type="RichTextLabel" parent="pause"]
margin_left = -235.0
margin_top = -219.0
margin_right = -114.0
margin_bottom = -147.0
theme = ExtResource( 2 )
text = "

-PAUSE-"

[connection signal="pressed" from="pause/VBoxContainer/resume" to="pause" method="_on_resume_pressed"]
[connection signal="visibility_changed" from="pause/VBoxContainer/resume" to="pause/VBoxContainer/resume" method="_on_resume_visibility_changed"]
[connection signal="pressed" from="pause/VBoxContainer/retry" to="pause" method="_on_retry_pressed"]
[connection signal="visibility_changed" from="pause/VBoxContainer/Options" to="pause/VBoxContainer/Options" method="_on_resume_visibility_changed"]
[connection signal="pressed" from="pause/VBoxContainer/exit" to="pause" method="_on_exit_pressed"]
